style.css
@import url("https://fonts.googleapis.com/css2?family=Changa:wght@700&family=Space+Mono&display=swap");

/* CSS Reset */
*,
*:before,
*:after {
	box-sizing: border-box;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ol,
ul {
	margin: 0;
	padding: 0;
}

ol,
ul {
	list-style: none;
	padding: 0;
	margin: 0;
}

/* VARIABLES */

:root {
	/* colors */
	--dark: #00070b;
	--primary: #cb48b7;
	--secondary: #ffba49;
	--light: #ececfe;

	/* fonts */
	--font-default: "Space Mono", monospace;
	--font-decorative: "Changa", sans-serif;
}

/* debug */
/* 
* {
	outline: 1px solid red;
} */

/* STYLING */
html {
	font-size: 20px;
	line-height: 1.5;
	font-family: var(--font-default);
	background: var(--dark);
	color: var(--light);
}

@media screen and (max-width: 640px) {
	html {
		font-size: 16px;
	}
}

main {
	overflow-x: hidden;
}

h1,
h2 {
	font-family: var(--font-decorative);
	font-size: 3rem;
	line-height: 4rem;
}

a {
	color: var(--primary);
	font-weight: bold;
}

a:hover,
a:active {
	color: var(--dark);
	background-color: var(--secondary);
	border-radius: 4px;
}

a:focus {
	border: 2px dotted var(--secondary);
}

header {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
}

nav {
	text-align: right;
	padding: 1rem;
	margin-top: 0.5rem;
}

main {
	margin: 0px auto;
	width: 100%;
	max-width: 1440px;
}

footer {
	text-align: center;
	padding: 1rem;
}

/* SECTIONS */

.intro {
	text-align: center;
	/*  Temporary footer */
	min-height: calc(100vh - 70px);
	height: 100%;
}

@media screen and (max-width: 640px) {
	.intro {
		min-height: calc(100vh - 110px);
		height: 100%;
	}
}

.intro--inner {
	max-width: 740px;
	padding: 1rem;
	position: relative;
}

/* COMPONENTS */
/* Social */

.social {
	position: absolute;
	bottom: 0;
	left: 1rem;
}

.social--item {
	margin-bottom: 0.5rem;
	line-height: 0;
}

.social--item a {
	padding: 4px;
	display: inline-block;
	transition: transform 0.3s ease-in;
	border: 1px solid transparent;
	opacity: 0.7;
}

.social--item a:hover,
.social--item a:focus {
	background-color: transparent;
	border: 1px solid var(--secondary);
	transform: translateX(5px);
	opacity: 1;
}

.social--item a:hover path,
.social--item a:focus path {
	fill: var(--secondary);
}

.social::after {
	content: "";
	display: block;
	width: 1px;
	height: 150px;
	background: var(--light);
	opacity: 0.6;
	position: relative;
	left: 50%;
	transform: translateX(-50%);
}

/* On mobile this element is horizontal */
@media screen and (max-width: 640px) {
	.social {
		position: relative;
		left: 0;
	}

	.social::after {
		display: none;
	}

	.social--list {
		display: flex;
		justify-content: center;
		align-items: center;
		max-width: 100%;
	}

	.social--item {
		margin: 0.5rem 1rem;
	}
}

/* UTIL CLASSES */
.decorative--secondary {
	color: var(--secondary);
}

.decorative--primary {
	color: var(--primary);
}

.flex {
	display: flex;
}

.column {
	flex-direction: column;
}

.center {
	justify-content: center;
	align-items: center;
}

.gap {
	gap: 0.5rem;
}

/* BUTTONS */

.btn {
	padding: 8px 16px;
	border-radius: 4px;
	text-transform: uppercase;
	text-decoration: none;
	transition: all 0.2s ease-in;
}

.btn--primary {
	border: 2px solid var(--primary);
}

.btn--primary:hover {
	background: var(--secondary);
	color: var(--dark);
	border-color: var(--secondary);
}

/* FANCY TOUCH */

::selection {
	background-color: var(--secondary);
	color: var(--dark);
}

.bg-decor--dots {
	width: 200%;
	height: 100%;
	background-image: url(assets/dots.svg);
	background-repeat: repeat-x;
	background-position: 0% 50%;
	opacity: 0.6;
	position: absolute;
	top: 0;
	right: 60%;
}

.bg-decor--sphere {
	background-image: url(assets/sphere.png);
	background-size: cover;
	background-repeat: no-repeat;
	position: absolute;
	opacity: 0.4;
}

.bg-decor--sphere-l {
	height: 120px;
	width: 120px;
	top: -150px;
	right: -15%;
}

.bg-decor--sphere-m {
	height: 80px;
	width: 80px;
	top: 150px;
	right: -23%;
	opacity: 0.2;
}

.bg-decor--sphere-s {
	height: 40px;
	width: 40px;
	top: 20px;
	right: 5%;
	opacity: 0.1;
}

/* Accessibiity */
@media (prefers-reduced-motion) {
	* {
		transform: none !important;
	}
}

